--- a/Willing/Willing/MainService/Cell/FriendsTableViewCell.xib
+++ b/Willing/Willing/MainService/Cell/FriendsTableViewCell.xib
@@ -18,23 +18,23 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my" translatesAutoresizingMaskIntoConstraints="NO" id="Riv-PR-2h4">
-                        <rect key="frame" x="0.0" y="20" width="40" height="40"/>
+                        <rect key="frame" x="10" y="20" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="tA4-cN-n4x"/>
                             <constraint firstAttribute="height" constant="40" id="tVP-uv-ASe"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yl9-Bx-KIg">
-                        <rect key="frame" x="50" y="10" width="192" height="60"/>
+                        <rect key="frame" x="60" y="10" width="172" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ce-Bi-KAu">
-                                <rect key="frame" x="0.0" y="0.0" width="192" height="30"/>
+                                <rect key="frame" x="0.0" y="0.0" width="172" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1F0-wR-lxM">
-                                <rect key="frame" x="0.0" y="30" width="192" height="30"/>
+                                <rect key="frame" x="0.0" y="30" width="172" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -42,7 +42,7 @@
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Iw9-1k-S8c">
-                        <rect key="frame" x="252" y="25" width="68" height="30"/>
+                        <rect key="frame" x="242" y="25" width="68" height="30"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZKu-Pi-XQU">
                                 <rect key="frame" x="8" y="0.0" width="52" height="30"/>
@@ -65,10 +65,10 @@
                     <constraint firstAttribute="bottom" secondItem="yl9-Bx-KIg" secondAttribute="bottom" constant="10" id="2V5-QC-O0u"/>
                     <constraint firstItem="Iw9-1k-S8c" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4Dl-bO-kZm"/>
                     <constraint firstItem="Riv-PR-2h4" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="A2D-nz-gX6"/>
-                    <constraint firstItem="Riv-PR-2h4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Dfa-me-ELL"/>
+                    <constraint firstItem="Riv-PR-2h4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Dfa-me-ELL"/>
                     <constraint firstItem="yl9-Bx-KIg" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GkJ-yc-soZ"/>
                     <constraint firstItem="yl9-Bx-KIg" firstAttribute="leading" secondItem="Riv-PR-2h4" secondAttribute="trailing" constant="10" id="Hze-kF-FM2"/>
-                    <constraint firstAttribute="trailing" secondItem="Iw9-1k-S8c" secondAttribute="trailing" id="aVW-4l-Kb4"/>
+                    <constraint firstAttribute="trailing" secondItem="Iw9-1k-S8c" secondAttribute="trailing" constant="10" id="aVW-4l-Kb4"/>
                     <constraint firstItem="yl9-Bx-KIg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="fqP-wz-gMu"/>
                     <constraint firstItem="Iw9-1k-S8c" firstAttribute="leading" secondItem="yl9-Bx-KIg" secondAttribute="trailing" constant="10" id="x0t-Og-He4"/>
                 </constraints>
