--- a/Willing/Willing/MainService/ViewControllers/FeedViewController.xib
+++ b/Willing/Willing/MainService/ViewControllers/FeedViewController.xib
@@ -1,22 +1,168 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedViewController" customModule="Willing" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="feedCollectionView" destination="Ggz-Ey-hwx" id="YZE-o3-scW"/>
+                <outlet property="followBtn" destination="tbb-n4-uZo" id="ItA-LS-q8z"/>
+                <outlet property="followUnderBarView" destination="hqu-ec-EUB" id="fTc-Ba-slE"/>
+                <outlet property="recentBtn" destination="Lle-VV-v4A" id="q4F-Ht-vjj"/>
+                <outlet property="recentUnderBarView" destination="ZnC-0x-6be" id="Bdt-6E-NCJ"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="Cgi-TN-lgh"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SUa-D5-SMA">
+                    <rect key="frame" x="20" y="44" width="374" height="60"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="피드" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhq-El-ZPj">
+                            <rect key="frame" x="0.0" y="22" width="52" height="36"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="Lhq-El-ZPj" firstAttribute="top" secondItem="SUa-D5-SMA" secondAttribute="top" constant="22" id="4tQ-m6-Yb1"/>
+                        <constraint firstAttribute="height" constant="60" id="5m4-87-4Ef"/>
+                        <constraint firstItem="Lhq-El-ZPj" firstAttribute="leading" secondItem="SUa-D5-SMA" secondAttribute="leading" id="WtM-kM-x8F"/>
+                    </constraints>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Jwa-1d-kVU">
+                    <rect key="frame" x="0.0" y="104" width="414" height="50"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lSu-PB-c3F">
+                            <rect key="frame" x="0.0" y="0.0" width="207" height="50"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbb-n4-uZo">
+                                    <rect key="frame" x="0.0" y="0.0" width="207" height="50"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                    <state key="normal" title="팔로우순">
+                                        <color key="titleColor" name="PRIMARY BLUE"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="followBtnClicked:" destination="-1" eventType="touchUpInside" id="OFl-t1-RrB"/>
+                                    </connections>
+                                </button>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s4G-Wy-D4g">
+                                    <rect key="frame" x="0.0" y="49" width="207" height="1"/>
+                                    <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="l20-Yq-EJJ"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hqu-ec-EUB" userLabel="FollowUnderBar">
+                                    <rect key="frame" x="0.0" y="48" width="207" height="2"/>
+                                    <color key="backgroundColor" name="PRIMARY BLUE"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="2" id="DDO-80-Nz3"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="hqu-ec-EUB" secondAttribute="trailing" id="Aj9-S1-XHy"/>
+                                <constraint firstItem="tbb-n4-uZo" firstAttribute="top" secondItem="lSu-PB-c3F" secondAttribute="top" id="F8y-1T-pEB"/>
+                                <constraint firstAttribute="bottom" secondItem="s4G-Wy-D4g" secondAttribute="bottom" id="FLx-x8-nCB"/>
+                                <constraint firstItem="hqu-ec-EUB" firstAttribute="leading" secondItem="lSu-PB-c3F" secondAttribute="leading" id="KuP-Ms-7lU"/>
+                                <constraint firstItem="s4G-Wy-D4g" firstAttribute="leading" secondItem="lSu-PB-c3F" secondAttribute="leading" id="Ue9-bi-tZM"/>
+                                <constraint firstAttribute="bottom" secondItem="tbb-n4-uZo" secondAttribute="bottom" id="cag-M0-5wu"/>
+                                <constraint firstAttribute="bottom" secondItem="hqu-ec-EUB" secondAttribute="bottom" id="gMP-Gx-f6E"/>
+                                <constraint firstAttribute="trailing" secondItem="s4G-Wy-D4g" secondAttribute="trailing" id="gNW-MG-Gva"/>
+                                <constraint firstItem="tbb-n4-uZo" firstAttribute="leading" secondItem="lSu-PB-c3F" secondAttribute="leading" id="kId-3t-uN5"/>
+                                <constraint firstAttribute="trailing" secondItem="tbb-n4-uZo" secondAttribute="trailing" id="keP-Mx-lZ3"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SzQ-Ir-OTs">
+                            <rect key="frame" x="207" y="0.0" width="207" height="50"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lle-VV-v4A">
+                                    <rect key="frame" x="0.0" y="0.0" width="207" height="50"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                    <state key="normal" title="최신순">
+                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="recentBtnClicked:" destination="-1" eventType="touchUpInside" id="lKj-3L-6y2"/>
+                                    </connections>
+                                </button>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Io2-OP-Pck">
+                                    <rect key="frame" x="0.0" y="49" width="207" height="1"/>
+                                    <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="2ix-E1-7g8"/>
+                                    </constraints>
+                                </view>
+                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZnC-0x-6be" userLabel="RecentUnderBar">
+                                    <rect key="frame" x="0.0" y="48" width="207" height="2"/>
+                                    <color key="backgroundColor" name="PRIMARY BLUE"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="2" id="6pm-Z2-cal"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="Io2-OP-Pck" secondAttribute="trailing" id="4vC-dU-nEh"/>
+                                <constraint firstAttribute="trailing" secondItem="ZnC-0x-6be" secondAttribute="trailing" id="6iX-tP-E2c"/>
+                                <constraint firstItem="Io2-OP-Pck" firstAttribute="leading" secondItem="SzQ-Ir-OTs" secondAttribute="leading" id="CZ6-XG-nBK"/>
+                                <constraint firstAttribute="trailing" secondItem="Lle-VV-v4A" secondAttribute="trailing" id="FfB-i3-ouc"/>
+                                <constraint firstAttribute="bottom" secondItem="ZnC-0x-6be" secondAttribute="bottom" id="Mme-Cq-8pF"/>
+                                <constraint firstAttribute="bottom" secondItem="Io2-OP-Pck" secondAttribute="bottom" id="QAU-ni-Rhr"/>
+                                <constraint firstItem="Lle-VV-v4A" firstAttribute="top" secondItem="SzQ-Ir-OTs" secondAttribute="top" id="YjN-C9-14O"/>
+                                <constraint firstItem="Lle-VV-v4A" firstAttribute="leading" secondItem="SzQ-Ir-OTs" secondAttribute="leading" id="e32-qW-KEz"/>
+                                <constraint firstAttribute="bottom" secondItem="Lle-VV-v4A" secondAttribute="bottom" id="fO6-RA-0fk"/>
+                                <constraint firstItem="ZnC-0x-6be" firstAttribute="leading" secondItem="SzQ-Ir-OTs" secondAttribute="leading" id="rjq-JJ-aGL"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="as1-ry-hls"/>
+                    </constraints>
+                </stackView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Ggz-Ey-hwx">
+                    <rect key="frame" x="20" y="164" width="374" height="698"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LXZ-hj-QMq">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="SUa-D5-SMA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="0q5-bb-J5M"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Ggz-Ey-hwx" secondAttribute="trailing" constant="20" id="AKg-sJ-O3v"/>
+                <constraint firstItem="Jwa-1d-kVU" firstAttribute="top" secondItem="SUa-D5-SMA" secondAttribute="bottom" id="Haq-A2-A3t"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Ggz-Ey-hwx" secondAttribute="bottom" id="PX9-SL-qXc"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SUa-D5-SMA" secondAttribute="trailing" constant="20" id="bsF-xv-Sjv"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Jwa-1d-kVU" secondAttribute="trailing" id="mjR-7u-t07"/>
+                <constraint firstItem="Ggz-Ey-hwx" firstAttribute="top" secondItem="Jwa-1d-kVU" secondAttribute="bottom" constant="10" id="qWn-jR-VDh"/>
+                <constraint firstItem="SUa-D5-SMA" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="wgb-ET-jvw"/>
+                <constraint firstItem="Ggz-Ey-hwx" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="xhF-ep-pFj"/>
+                <constraint firstItem="Jwa-1d-kVU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="yas-7s-ALA"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="141" y="94"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="PRIMARY BLUE">
+            <color red="0.16500000655651093" green="0.57999998331069946" blue="0.83899998664855957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
